# FrizzlePlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/frizzle/frizzleplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/frizzle/frizzleplayer/: FrizzlePlayer.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/frizzle/frizzleplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
